Ajuste de los elementos a una pantalla 940px, bajada de la resolución a las imágenes, ajuste para facilidad de responsividad

--- a/Challenge-ONE-Encriptador.html
+++ b/Challenge-ONE-Encriptador.html
@@ -30,12 +30,12 @@
                 </div>
                 
               </div>
-              <div class="right">
+              <div class="rightsinmensaje">
                 <div class = "sinmensaje">
                     <img id="image" src="SinMensaje.png" alt="Sin mensaje">
                     <h1 id="messageText">No se ha encontrado ningún mensaje</h1>
-                    <h2>Ingrese algún mensaje para encriptar o desencriptar</h2>
                 </div>
+                <button id="Boton-Copiar">Copiar</button>
               </div>
             </div>
           
