Creación del archivo script.js para las funciones a implementar

--- a/Challenge-ONE-Encriptador.html
+++ b/Challenge-ONE-Encriptador.html
@@ -30,7 +30,7 @@
                 </div>
                 
               </div>
-              <div class="rightsinmensaje">
+              <div class="right">
                 <div class = "sinmensaje">
                     <img id="image" src="SinMensaje.png" alt="Sin mensaje">
                     <h1 id="messageText">No se ha encontrado ningún mensaje</h1>
