Posible version para entrega de challenge. Ajustes visuales y ajustes de colores e imágenes. Colocación de un título y footer. Quedaría pendiente hacer que la página sea responsiva segun lo puesto en el figma

--- a/Challenge-ONE-Encriptador.html
+++ b/Challenge-ONE-Encriptador.html
@@ -15,6 +15,8 @@
         <header>
             <div class="caja">
                 <h1><img src="Logo_Encriptador.png" alt="Logo de la página"></h1>
+                <h1>ORACLE CHALLENGE ONE</h1>
+                <h2>BAMR (DE)CRYPTER</h2>
             </div> 
         </header>
         <body>
@@ -41,5 +43,11 @@
           
             <script src="script.js"></script>
         </main>
+
+        <footer>
+            <img src="Logo_Encriptador_sinfondo.png" alt="Logo de la página sin fondo">
+            <h1>Challenge ONE - 2023</h1>
+            <h2>Barush Martínez </h2>
+        </footer>
     </body>
 </html>
